@@ -87,14 +87,8 @@ const char kProgressTextureCoords = 0x1e;
 
 -(void)setPercentage:(float) percentage
 {
-	if(percentage_ != percentage){
-		if(percentage_ < 0.f)
-			percentage_ = 0.f;
-		else if(percentage > 100.0f)
-			percentage_  = 100.f;
-		else
-			percentage_ = percentage;
-		
+	if(percentage_ != percentage) {
+        percentage_ = clampf( percentage, 0, 100);		
 		[self updateProgress];
 	}
 }
